# proto-forall-prof

./: CMakeLists.txt  README  TIMINGS.txt  forallTest.cpp  stuff.sh  version.h.in
analysis/: slurp-prtimerrep.py
inputfiles/: input-forall_constoprim.json  input-stencil.json
prof/: launch-tests.py
prof/analysis/: analysis.py
roman/: CMakeLists.txt  build-n-test-stuffs.sh  foralltest.cpp
runs/: launch-tests.py  launch.py
src/: CMakeLists.txt  forallTest.cpp  forall_constoprim.cpp  miscTests.cpp  stencil.cpp
tests/: forall_constoprim
tests/analysis/: analysis.py  slurp_prtimerrep.py
tests/tests/nx_16/N_10/heavy/: TIMINGS.txt  input.json  report-nx_16-N_10-heavy.nsys-rep
tests/tests/nx_16/N_10/light/: TIMINGS.txt  report-nx_16-N_10-light.nsys-rep
